--- a/_posts/2016-12-07-个人博客搭建笔记.md
+++ b/_posts/2016-12-07-个人博客搭建笔记.md
@@ -3,7 +3,7 @@ layout: post
 title: "个人博客折腾笔记"
 date: 2016-12-07 
 description: "jeklly+Gitpage，搭建自己的博客"
-tag: 博客 
+tag: 博客折腾 
 ---
 
  这一路也是踩了无数的坑，最后总算折腾出来了。这里我找了一个最理想最简单的办法来利用git page搭建博客。
