--- a/_posts/2016-12-22-机器学习算法之k邻算法.md
+++ b/_posts/2016-12-22-机器学习算法之k邻算法.md
@@ -20,13 +20,13 @@ C.极具魅力的人
 2.玩视频游戏所消耗的时间百分比
 3.每周消费冰淇凌公升数
 大致看一下样本
-![](http://ohsqlm7gj.bkt.clouddn.com/16-12-24/19986021-file_1482549194036_8584.png)
+![](http://pic.findbugs.top/16-12-24/19986021-file_1482549194036_8584.png)
 为了方便统计，把后面的largeDoses，smallDoses,didntLike转换成数字1,2,3，转换之后的样本，其实根本不用转，但还是转了。
-![](http://ohsqlm7gj.bkt.clouddn.com/16-12-24/49782002-file_1482549301470_161f7.png)
+![](http://pic.findbugs.top/16-12-24/49782002-file_1482549301470_161f7.png)
 有了这么多的样本，在下一次输入婚恋网的女性三个条件时，程序来判断下是不是小明喜欢的类型，当然会有一定的误差，但是误差在可以接受范围之类。
 先说说算法思路，根据上面的样本特性，可以建立一个三维坐标，横纵竖左边分别时那三个特性，这样就建立起一个个点了。这时候输入样本的特性，也会形成一个点，然后再计算点与点之间的距离。
 公式就是
-![](http://ohsqlm7gj.bkt.clouddn.com/16-12-24/30647690-file_1482549691753_110bb.png)(这里以二维为例)
+![](http://pic.findbugs.top/16-12-24/30647690-file_1482549691753_110bb.png)(这里以二维为例)
 通过计算这个新输入的点和所有样本的距离，选取距离最小的k个点，然后再求出这k个点里面largeDoses，smallDoses,didntLike所占的比例。选取比例最高的那个，比如说largeDoses。
 算法的思路讲了，现在具体怎么做，不可能去新建一个类，包含这些属性吧。借助矩阵的一些特性，可以让一些需要计算的地方变得简单很多。(于是就去翻翻了忘干了的矩阵知识，捡回来一点点了。)
 先定义一个函数，传入的参数是要测试的数据，已有的样本数据，已有的标签，还有实数k,之所以选择python是，numpy这个库使得矩阵的很多操作变的极其的简单，不需要自己去写矩阵方面的算法
@@ -51,7 +51,7 @@ if __name__ == "__main__":
 	group, labels = createDataSet()
 	print classify0([0, 0], group, labels, 3)
 ```  
-![](http://ohsqlm7gj.bkt.clouddn.com/16-12-25/84694067-file_1482633630422_7ed5.png)
+![](http://pic.findbugs.top/16-12-25/84694067-file_1482633630422_7ed5.png)
 和预期的一样，这样算法就算完成了。下一步就是要去解析出我们的txt样本数据了，化成一个1000行3列的矩阵，还有最后一列的数据化成一个1000数组
 ```
 def file2matrix(filename):
@@ -72,7 +72,7 @@ def file2matrix(filename):
 测试一下  
 ```returnMat, classLabelVector = file2matrix('datingTestSet2.txt')
 print returnMat```  
-![](http://ohsqlm7gj.bkt.clouddn.com/16-12-25/35859490-file_1482634564394_2990.png)
+![](http://pic.findbugs.top/16-12-25/35859490-file_1482634564394_2990.png)
 其实到这一步，绝大部份工作已经完成，可是仔细想想的话，如果直接就去求距离，其实还有一个问题，就是飞行客里程数太大，都是万级别的数字，玩视频所占的比例太小，都是小于1的，求平方差的时候，玩视频这个性质对于飞行客里程数来说，几乎可以忽略不计，但实际上这三者是等权的，都很重要，都占3分之1。所以归一化特征  
 ```
 def autoNorm(dataSet):
@@ -85,7 +85,7 @@ def autoNorm(dataSet):
 	normDataSet = normDataSet/tile(ranges, (m,1))
 	return normDataSet, ranges, minVals
 ```
-现在是等权了![](http://ohsqlm7gj.bkt.clouddn.com/16-12-25/51574452-file_1482638334094_5ff6.png)
+现在是等权了![](http://pic.findbugs.top/16-12-25/51574452-file_1482638334094_5ff6.png)
 到这一步基本上是完成了，为了测试算法的准确性，我用用1000个样本中的900作为训练样本，剩下100用来作为测试准确性的样本。  
 ```
 def datingClassTest():
@@ -101,6 +101,6 @@ def datingClassTest():
 		if (classifierResult != datingLabels[i]): errorCount += 1.0
 	print "the total error rate is : %f" % (errorCount/float(numTestVecs))
 	```  
-	![](http://ohsqlm7gj.bkt.clouddn.com/16-12-25/68195198-file_1482638528130_179b9.png)
+	![](http://pic.findbugs.top/16-12-25/68195198-file_1482638528130_179b9.png)
  错误率百分之五，勉强接受的范围。
  觉得机器学习还是蛮有意思的一件事，我会投入更多的时间去学习。
