--- a/_posts/2017-11-03-struts2漏洞调试合集之S2-033和037.md
+++ b/_posts/2017-11-03-struts2漏洞调试合集之S2-033和037.md
@@ -7,11 +7,11 @@ tag: 漏洞分析
 ---
 #介绍  
 其实这个037就是033的绕过，虽然点不一样，033需要开启动态函数调用，但是037找到了不需要开启动态函数的地方。
-![](http://ohsqlm7gj.bkt.clouddn.com/17-11-6/42641946.jpg)
+![](http://pic.findbugs.top/17-11-6/42641946.jpg)
 官方的说明，在启用rest时，可能会造成远程代码执行，rest最近也出了一个xml反序列漏洞，具体的漏洞原因可以看我的前几次文章。[http://www.codersec.net/2017/09/s2052%E6%BC%8F%E6%B4%9E%E8%A7%A3%E6%9E%90%E5%92%8C%E8%A1%A5%E4%B8%81%E5%88%86%E6%9E%90/](http://www.codersec.net/2017/09/s2052%E6%BC%8F%E6%B4%9E%E8%A7%A3%E6%9E%90%E5%92%8C%E8%A1%A5%E4%B8%81%E5%88%86%E6%9E%90/)。基本可以定位了，那就是直接分析struts2-rest-plugin了。
 #分析  
 好在struts2-rest-plugin代码量不多，如果分析过s2-052的也知道。插件的一些知识点
-![](http://ohsqlm7gj.bkt.clouddn.com/17-11-6/6138604.jpg)其实最终的触发点和之前分析的s2-032是一样的，都是在DefaultActionInvocation里的OgnlUtil.callMethod里面触发。那么追究其原因，就是在向ActionMapping放入键值对的时候没有过滤好。在RestActionMapper.java 的getMapping处下断点。
+![](http://pic.findbugs.top/17-11-6/6138604.jpg)其实最终的触发点和之前分析的s2-032是一样的，都是在DefaultActionInvocation里的OgnlUtil.callMethod里面触发。那么追究其原因，就是在向ActionMapping放入键值对的时候没有过滤好。在RestActionMapper.java 的getMapping处下断点。
 我把关键代码贴出来，代码的运行过程满满地描述出来
 ```
     ActionMapping mapping = new ActionMapping();  
@@ -44,7 +44,7 @@ private void handleDynamicMethodInvocation(ActionMapping mapping, String name) {
     }
 ```
 如果开启了动态调用，那么mapping.setMethod就设置进去，后面的执行就和s2-032一样了，这个是s2-033的点。如果设置动态调用,直接修改struts.xml就ok了。
-![](http://ohsqlm7gj.bkt.clouddn.com/17-11-6/298879.jpg)
+![](http://pic.findbugs.top/17-11-6/298879.jpg)
 接下来就厉害了，
     ```
 String fullName = mapping.getName();
