--- a/_posts/2017-9-04-Spring 框架的反序列化漏洞分析.md
+++ b/_posts/2017-9-04-Spring 框架的反序列化漏洞分析.md
@@ -10,9 +10,9 @@ tag: java安全
 最近在学习反序列化之类漏洞之类的东西，之前也是看别人分析，一直没有实践，这次找到16年的一个漏洞，准备分析调试一下。漏洞环境[https://github.com/zerothoughts/spring-jndi](https://github.com/zerothoughts/spring-jndi)
 ## 漏洞描述  
 没搜到编号，反正重点是在于学习这个漏洞。首先先把服务端跑起来，服务端代码很简单，是一个serversocket的，监听9999端口，并且抑制等待客户端socket链接过来。  
-![](http://ohsqlm7gj.bkt.clouddn.com/17-9-4/47052909.jpg)
+![](http://pic.findbugs.top/17-9-4/47052909.jpg)
 客户端代码
-![](http://ohsqlm7gj.bkt.clouddn.com/17-9-4/62902809.jpg)
+![](http://pic.findbugs.top/17-9-4/62902809.jpg)
 客户端流程如下:  
 1.客户端代码先监听8088端口，开启一个文件下载服务。其中该地址映射的就是ExportObject.class。
 2.将文件地址http://127.0.0.1:8080/ExportObject.class映射到rmi服务上面  
@@ -37,7 +37,7 @@ Context namingContext = new InitialContext();
 IService service02 = (IService) namingContext.lookup(url + "service02"); 
 ```
 只需要调用lookup将该路径传递进去就可以获得IService类的对象了，又做了这个基础后面理解起来就很简单了。  
-Spring框架中的JtaTransactionManager出了问题，JtaTransactionManager实现了Serializable，并重写了readObject函数，所以当服务端运行到readObject的时候![](http://ohsqlm7gj.bkt.clouddn.com/17-9-4/82122185.jpg)，就会调用JtaTransactionManager类的readObject函数，跟进这个函数
+Spring框架中的JtaTransactionManager出了问题，JtaTransactionManager实现了Serializable，并重写了readObject函数，所以当服务端运行到readObject的时候![](http://pic.findbugs.top/17-9-4/82122185.jpg)，就会调用JtaTransactionManager类的readObject函数，跟进这个函数
 ```
 private void readObject(ObjectInputStream ois) throws IOException, ClassNotFoundException {
         ois.defaultReadObject();
@@ -47,13 +47,13 @@ private void readObject(ObjectInputStream ois) throws IOException, ClassNotFound
     }
 ```
 其中initUserTransactionAndTransactionManager()函数的作用看意思应该是初始化一些参数，进入这个函数  
-![](http://ohsqlm7gj.bkt.clouddn.com/17-9-4/29673411.jpg)
+![](http://pic.findbugs.top/17-9-4/29673411.jpg)
 继续跟进lookupUserTransaction这个函数
-![](http://ohsqlm7gj.bkt.clouddn.com/17-9-4/30012817.jpg)
+![](http://pic.findbugs.top/17-9-4/30012817.jpg)
 最终执行了lookup，如果看了前面的话应该还记得需要跟一个rmi路径，这个路径其实在ExploitClient中就设置了
-![](http://ohsqlm7gj.bkt.clouddn.com/17-9-4/87739275.jpg)
+![](http://pic.findbugs.top/17-9-4/87739275.jpg)
 所以最终被带入到lookup里面了，那么会怎样？由于路径是rmi://127.0.0.1:1099/Object ,那怎么样？new 一个Object呗，由于前面用bind将ExportObject和Object绑定了，那么就是执行ExportObject的构造函数咯，构造函数里面就是弹出一个计算器，至此，整个逻辑调通。
-![](http://ohsqlm7gj.bkt.clouddn.com/17-9-4/88830373.jpg)
+![](http://pic.findbugs.top/17-9-4/88830373.jpg)
 
 ##  流程总结  
 用一张图来总结整个流程比较好，这里借鉴了Seebug上某片文章的图  
